feat: api docs
