# src/docs/swagger_output.json
@@ -442,12 +442,12 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schema/CreateEventRequest"
+                "$ref": "#/components/schemas/CreateEventRequest"
               }
             },
             "application/xml": {
               "schema": {
-                "$ref": "#/components/schema/CreateEventRequest"
+                "$ref": "#/components/schemas/CreateEventRequest"
               }
             }
           }
