# src/routes/api.ts
@@ -119,7 +119,7 @@ router.put(
     #swagger.requestBody = {
       required: true,
       schema: {
-        $ref: '#/components/schema/CreateEventRequest'
+        $ref: '#/components/schemas/CreateEventRequest'
       }
     }
   */
